# python-project-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
