[tool.poetry]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_description}}"
version = "0.1.0"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.812"
pre-commit = "^2.11.0"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pyupgrade = "^2.10.0"
reorder-python-imports = "^2.4.0"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_slug}}.__main__:main"

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116, W0511, W1203"

[build-system]
requires = ["poetry>=1.1.16"]
build-backend = "poetry.masonry.api"
